--- a/package.json
+++ b/package.json
@@ -1,23 +1,61 @@
 {
-  "name": "newer-and-improved-hentai-game",
+  "name": "newer-and-improved-puzzle-game",
   "version": "0.0.1",
-  "description": "",
+  "description": "just another puzzle game",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kwokkayan/Newer-and-Improved-Hentai-Game.git"
+    "url": "git+https://github.com/kwokkayan/Newer-and-Improved-Puzzle-Game.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "kwokkayan",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kwokkayan/Newer-and-Improved-Hentai-Game/issues"
+    "url": "https://github.com/kwokkayan/Newer-and-Improved-Puzzle-Game/issues"
   },
-  "homepage": "https://github.com/kwokkayan/Newer-and-Improved-Hentai-Game#readme",
+  "homepage": "https://github.com/kwokkayan/Newer-and-Improved-Puzzle-Game#readme",
   "devDependencies": {
-    "electron": "^10.0.0"
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "electron": "^10.4.3"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
+    "random-anime": "^1.0.6"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "newer_and_improved_puzzle_game"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
